<resources>
    <string name="app_name">Modul 4 XML</string>
    <string name="app_title">MyComicList</string>
    <string name="cd_settings_menu">Settings</string>
    <string name="label_top_comic">Top Comic</string>
    <string name="cd_bg_image">Background image</string>
    <string name="btn_return">Return</string>
    <string name="label_change_language">Change Language?</string>
    <string name="btn_switch_language">Switch Language</string>

    <string name="cd_carousel_bg_image">Carousel background image</string>
    <string name="label_recommendation">My Recommendation</string>
    <string name="cd_mangadex_logo">MangaDex logo</string>
    <string name="btn_mangadex">Mangadex</string>
    <string name="cd_detail_icon">Detail icon</string>
    <string name="btn_detail">Detail</string>
    <string name="cd_cover_image">Comic cover image</string>

    <string name="genre_romance">Romance</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_transmigration">Transmigration</string>
    <string name="genre_wuxia">Wuxia</string>
    <string name="genre_reincarnation">Reincarnation</string>
    <string name="genre_time_travel">Time Travel</string>
    <string name="genre_historical">Historical</string>
    <string name="genre_psychological">Psychological</string>
    <string name="genre_tragedy">Tragedy</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_school_life">School Life</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_martial_arts">Martial Arts</string>
    <string name="genre_fantasy">Fantasy</string>

    <string name="please_bully_me_miss_villainess">I, Yvonne, reincarnated into an otome game as the rich villainess. According to the game\'s plot, a character loathed by everyone such as myself has the main role of bullying the heroine, pushing her towards the various love interests\' romantic routes. But it seems like there\'s something wrong with Elsa, the heroine! She\'s getting too close to me!</string>
    <string name="reverend_insanity">A story of a villain, Fang Yuan, who was reborn 500 years into the past with the Spring Autumn Cicada he painstakingly refined. With his profound wisdom, battle and life experiences, he seeks to overcome his foes with skill and wit! Ruthless and amoral, he has no need to hold back as he pursues his ultimate goals.</string>
    <string name="sss_class_suicide_hunter">In the mysterious, RPG dungeon-like Tower, Gongja Kim lives a mundane existence, envying all the star hunters. One day, his wish for more is granted with a legendary skill to copy others’ abilities… at the cost of his life. Before he can make sense of it, he’s killed by the #1 hunter, the Flame Emperor! But this activates his skill and now he’s copied a new one, the ability to travel back in time upon death.</string>
    <string name="i_got_a_new_skill_every_time_i_was_exiled">An adventurer named Ed was exiled from his party because he was considered useless, but instead of being sad and upset he was actually happy!!? It turns out that it\'s not without reason that he feels happy when he\'s exiled from his party, because every time he\'s been exiled he will receive a skill that makes him even more invincible…</string>
    <string name="the_greatest_estate_developer">When civil engineering student Suho Kim falls asleep reading a fantasy novel, he wakes up as a character in the book. Suho is now in the body of Lloyd Frontera, a lazy noble who loves to drink, and whose family is in a mountain of debt. Using his engineering knowledge, Suho designs inventions to avert the terrible future that lies in wait for him.</string>
    <string name="lord_of_the_mysteries">With the rising tide of steam power and machinery, who can come close to being a Beyonder? Shrouded in the fog of history and darkness, who or what is the lurking evil that murmurs into our ears? Waking up to be faced with a string of mysteries, Zhou Mingrui finds himself reincarnated as Klein Moretti in an alternate Victorian era world where he sees a world filled with machinery, cannons, dreadnoughts, airships, difference machines, as well as Potions, Divination, Hexes, Tarot Cards, Sealed Artifacts…</string>
    <string name="the_summer_you_were_there">Shizuku is a shy high schooler who hardly talks to other people. Instead, she loses herself in writing, crafting a novel that she never intends to show anyone. But when her cute, popular classmate Kaori gets her hands on Shizuku’s manuscript, everything changes</string>
    <string name="the_moon_on_a_rainy_night">One rainy night, Saki is rushing to a piano lesson when she crashes into a beautiful, long-haired girl, dropping her sheet music in the process. Saki stutters an apology, but the girl simply hands back her sheet music and leaves without a word. Saki begins her first day of high school the following morning, only to find the stranger from the night before sitting at the desk next to hers. She learns that the girl\'s name is Kanon and that she is not quite completely deaf, but very hard of hearing. Though Kanon needs to be close to people to read their lips, she tends to push people away with her icy demeanor. Through one kind gesture, Saki slowly begins breaking down the walls around Kanon, even as she feels something new blossoming within her.</string>
    <string name="movies_are_real">While working as a small supporting actor in a movie, Ki Man Sung has nothing else going for him. However, that was when ,through mysterious circumstance, the movie set had become reality during filming. With the sound of the director’s cut, during that short take, he’s not an actor but actually thrown into the events occurring, showing the pain and emotions he faces in that moment. He can only come back if he creates that perfect take…!</string>
    <string name="legend_of_the_northern_blade">When the world was plunged into darkness by the ‘Silent Night’, martial artists gathered to form the Northern Heavenly Sect and restored peace. Years later, betrayal from the mainland destroyed the sect and killed its leader, leaving his son Jin Mu-Won behind to uncover hidden techniques and begin his own journey.</string>
    <string name="return_of_the_mount_hua_sect">Chung Myung, The 13th Disciple of the Mount Hua Sect, One of the 3 Great Swordsmen, Plum Blossom Sword Saint, defeated Chun Ma, who has brought destruction and disarray onto the world. After the battle, he breathes his last breath on top of the headquarter mountain of the Heavenly Demon Sect. He is reborn after 100 years in the body of a child. ……What? The Mount Hua Sect has fallen? What kind of nonsense is that!?</string>
    <string name="the_one_within_the_villainess">In order to clear the name of \'Emi\', a girl who had reincarnated as Remilia, the villainess of an otome game, the real Remilia who had been watching all along inside awakens.</string>
    <string name="the_kings_avatar">No one could ever come close to Ye Qiu’s skills in Glory, a popular MMO that took the world by storm. However, his professional team replaced him as captain and seized his account. Ye Qiu was left to start anew at an internet café as a network manager. When the new 10th server launched, he dove back in, armed with a decade of experience and an unfinished custom weapon. His path to redemption, filled with strategy and memories, marks his thrilling return to the top.</string>
    <string name="i_made_friends_with_the_second_prettiest_girl_in_my_class">I, Maki Maehara, am a class loner. My first friend is Umi Asanagi, the girl everyone calls the “second cutest in class.” I thought someone like me lived in a different world, but through a twist of fate, we soon start hanging out together every Friday after school.</string>
</resources>
