<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cd_carousel_bg_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_card_overlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_recommendation"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/coverImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cd_cover_image"
                app:shapeAppearanceOverlay="@style/RoundedCoverImage"
                xmlns:app="http://schemas.android.com/apk/res-auto"/>

            <LinearLayout
                android:id="@+id/infoColumn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end" />

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:ellipsize="end"
                    android:lineSpacingMultiplier="1.5"
                    android:gravity="top" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/authorText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <TextView
                        android:id="@+id/genreText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:maxLines="1"
                        android:ellipsize="end" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
