<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cd_carousel_bg_image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card_overlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="14">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/coverImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:layout_marginStart="20dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/cd_cover_image"
                    app:shapeAppearanceOverlay="@style/RoundedCoverImage" />

                <LinearLayout
                    android:id="@+id/infoColumn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end" />

                    <TextView
                        android:id="@+id/descriptionText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:ellipsize="end"
                        android:lineSpacingMultiplier="1.5"
                        android:gravity="top" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/authorText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp" />

                        <TextView
                            android:id="@+id/genreText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:maxLines="1"
                            android:ellipsize="end" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:background="@android:color/black"
                android:paddingTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="8dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMangadex"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:text="@string/btn_mangadex"
                    android:textColor="@android:color/black"
                    app:backgroundTint="#FFFF9800"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/mangadex_logo"
                    app:iconGravity="textStart"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/btn_detail"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    app:backgroundTint="#b9c5ed"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_menu_24"
                    app:iconGravity="textStart" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</com.google.android.material.card.MaterialCardView>
